--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -35,7 +35,7 @@
 	    
         <div class="col-md-4 col-md-offset-1 col-sm-6 col-xs-6" id="logo">
             <a class="nav-brand" href="{{nav[0].path}}">
-            	<img class="logo" src="/images/layout/Lausanne2020-Emblem.png" />
+            	<img class="logo" id="logos" src="/images/layout/Lausanne2020-Emblem.png" />
             </a>
       	</div> 
 	
