--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -3,7 +3,7 @@
 <nav id="mainNav" class="navbar navbar-custom navbar-fixed-top" style="padding-bottom: 10px; margin-bottom: 0;">
     <div class="container" style="padding-right: 0;">
         <div class="col-md-3 col-sm-6 col-xs-6" id="countdown">
-            <div id="countdown_container_tag" class="countdown_container">
+            <div id="countdown_container_tag" class="countdown_container" style="transform: scale(0.54);">
                 <div class="logo">
                     <img src="/assets/omega_countdown/official-timekeeper-omega-fr.jpg">
                     <!-- <img class="retina" src="/assets/omega_countdown/official-timekeeper-omega.svg"> -->
