--- a/css/countdown.css
+++ b/css/countdown.css
@@ -17,8 +17,10 @@
 #ad {
     height: 123px;    
 }
-.countdown_container {
-    transform: scale(0.54);
+@media (min-width: 601px) {
+    .countdown_container {
+        transform: scale(0.54) !important;
+    }
 }
 @media (max-width: 600px) {
     .countdown_container {
