--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -188,3 +188,23 @@ html .hero {
         width: 140px;
     }
 }
+.volunteers_small {
+    visibility: hidden;
+    position: absolute;
+    @media(max-width: 991px) {
+        visibility: visible !important;
+	position: relative !important;
+    }
+}
+.volunteers_big{
+    @media(max-width: 991px) {
+	visibility: hidden;
+	position: absolute;
+    }
+}
+.volunteers_text p {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 2.2vw;
+    margin-left: 10vw;
+}
