--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -203,8 +203,14 @@ html .hero {
     }
 }
 .volunteers_text p {
-    text-align: center;
+    text-align: center !important;
     text-transform: uppercase;
     font-size: 2.2vw;
+    margin-left: 10vw;
+}
+.volunteers_text_small p {
+    text-align: center !important;
+    text-transform: uppercase;
+    font-size: 2.5vw;
     margin-left: 10vw;
 }
