--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -170,3 +170,11 @@
 	margin-left: 20px !important;	    
     }
 }
+@media (max-width:440px) {
+    #countdown {
+	height: 70px !important;
+    }
+    #logo {
+	height: 70px !important;
+    }
+}
