--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -6,11 +6,11 @@
             <div id="countdown_container_tag" class="countdown_container" style="transform: scale(0.54);">
                 <div class="logo">
                     {% if site.lang == "fr-fr" %}
-			<img src="../omega_countdown/official-timekeeper-omega-fr.jpg">
+			<img src="/assets/omega_countdown/official-timekeeper-omega-fr.jpg">
 		    {% else if site.lang == "de-de" %}
-			<img src="../omega_countdown/official-timekeeper-omega-de.jpg">
+			<img src="/assets/omega_countdown/official-timekeeper-omega-de.jpg">
 		    {% else %}
-			<img src="../omega_countdown/official-timekeeper-omega.jpg">
+			<img src="/assets/omega_countdown/official-timekeeper-omega.jpg">
 		    {% endif %}
                     <!-- <img class="retina" src="/assets/omega_countdown/official-timekeeper-omega.svg"> -->
                 </div>
