--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -7,7 +7,8 @@
                 <div class="logo">
                     {% if site.lang == "fr-fr" %}
 			<img src="/assets/omega_countdown/official-timekeeper-omega-fr.jpg">
-		    {% elseif site.lang == "de-de" %}
+		    {% endif %}
+		    {% if site.lang == "de-de" %}
 			<img src="/assets/omega_countdown/official-timekeeper-omega-de.jpg">
 		    {% else %}
 			<img src="/assets/omega_countdown/official-timekeeper-omega.jpg">
