--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -10,7 +10,8 @@
 		    {% endif %}
 		    {% if site.lang == "de-de" %}
 			<img src="/assets/omega_countdown/official-timekeeper-omega-de.jpg">
-		    {% else %}
+		    {% endif %}
+		    {% if site.lang == "en-gb" || site.lang == "es-es" || site.lang == "it-it" %}
 			<img src="/assets/omega_countdown/official-timekeeper-omega.jpg">
 		    {% endif %}
                     <!-- <img class="retina" src="/assets/omega_countdown/official-timekeeper-omega.svg"> -->
