--- a/_layouts/single-news.html
+++ b/_layouts/single-news.html
@@ -1,6 +1,16 @@
 ---
 layout: default
 ---
+<div id="fb-root"></div>
+
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v3.0';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <div class="single-news-content">
 	<header>
 		<div class="news-image">
@@ -15,4 +25,5 @@ layout: default
 			<time pubdate datetime="{{page.document.fragments.publication_date.date | date_to_xmlschema}}" title="{{page.document.fragments.publication_date.date | date_to_xmlschema | date: '%d.%m'}}">{{page.document.fragments.publication_date.date | date_to_xmlschema | date: "%d.%m.%Y"}}</time>
 		</p>
 	</div>
+	<div class="fb-share-button" data-href="https://www.lausanne2020.com/fr/news/reunion-du-conseil-des-athletes-l2020" data-layout="button" data-size="small" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.lausanne2020.com%2Ffr%2Fnews%2Freunion-du-conseil-des-athletes-l2020&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Partager</a></div>
 </div>
