--- a/_layouts/single-news.html
+++ b/_layouts/single-news.html
@@ -3,13 +3,12 @@ layout: default
 ---
 <div id="fb-root"></div>
 
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v3.0';
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+<script language="javascript">
+    function fbshareCurrentPage()
+    {window.open("https://www.facebook.com/sharer/sharer.php?u="+escape(window.location.href)+"&t="+document.title, '', 
+    'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');
+    return false; }
+</script>
 
 <div class="single-news-content">
 	<header>
@@ -19,19 +18,11 @@ layout: default
 	</header>
 	<div class="container news-content">
 		<h1>{{page.document.fragments.title.text}}</h1>
-		<p class="p_news" style="width: 50%; float: left;">{{ page.document.fragments.body.html | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
+		<p class="p_news">{{ page.document.fragments.body.html | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
     
-    <p class="news_date">
+    <p class="news_date" style="width: 50%; float: left;">
 			<time pubdate datetime="{{page.document.fragments.publication_date.date | date_to_xmlschema}}" title="{{page.document.fragments.publication_date.date | date_to_xmlschema | date: '%d.%m'}}">{{page.document.fragments.publication_date.date | date_to_xmlschema | date: "%d.%m.%Y"}}</time>
 		</p>
-		<p id="demo"></p>
-
-<script>
-function myFunction() {
-    var x = document.URL;
-    document.getElementById("demo").innerHTML = x;
-}
-</script>
-		<div class="fb-share-button" style="float: right;" data-href="https://www.lausanne2020.com/fr/news/reunion-du-conseil-des-athletes-l2020" data-layout="button" data-size="small" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.lausanne2020.com%2Ffr%2Fnews%2Freunion-du-conseil-des-athletes-l2020&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Partager</a></div>
+		<div class="fb-share-button" style="float: right;" data-layout="button" data-size="small" data-mobile-iframe="true"><a href="javascript:fbshareCurrentPage()" target="_blank" alt="Partager sur Facebook">Partager</a></div>
 	</div>
 </div>
