--- a/_layouts/single-news.html
+++ b/_layouts/single-news.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 ---
-<div id="fb-root"></div>
 
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -14,10 +13,10 @@ layout: default
 
 <script language="javascript">
     function fbshareCurrentPage()
-    {window.open("https://www.facebook.com/sharer/sharer.php?u="+escape(window.location.href)+"&t="+document.title, '', 
-    'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');
-    return false; }
+    var url = "https://www.facebook.com/sharer/sharer.php?u="+escape(window.location.href)+"&t="+document.title+"&amp;src=sdkpreparse"
+    return url; }
 </script>
+
 
 <div class="single-news-content">
 	<header>
@@ -32,6 +31,6 @@ layout: default
     <p class="news_date" style="width: 50%; float: left;">
 			<time pubdate datetime="{{page.document.fragments.publication_date.date | date_to_xmlschema}}" title="{{page.document.fragments.publication_date.date | date_to_xmlschema | date: '%d.%m'}}">{{page.document.fragments.publication_date.date | date_to_xmlschema | date: "%d.%m.%Y"}}</time>
 		</p>
-		<div class="fb-share-button" style="float: right;" data-layout="button" data-size="small" data-mobile-iframe="true"><a href="javascript:fbshareCurrentPage()" target="_blank" alt="Partager sur Facebook">Partager</a></div>
+		<div class="fb-share-button" data-layout="button" data-size="small" data-mobile-iframe="true"><a target="_blank" href="javascript:fbshareCurrentPage()" class="fb-xfbml-parse-ignore">Partager</a></div>
 	</div>
 </div>
