--- a/_layouts/single-news.html
+++ b/_layouts/single-news.html
@@ -17,6 +17,12 @@ layout: default
     return url; }
 </script>
 
+<script language="javascript">
+    function fbshareCurrentPageUnesc()
+    var url = unescape("https://www.facebook.com/sharer/sharer.php?u="+escape(window.location.href)+"&t="+document.title+"&amp;src=sdkpreparse")
+    return url; }
+</script>
+
 
 <div class="single-news-content">
 	<header>
@@ -31,6 +37,6 @@ layout: default
     <p class="news_date" style="width: 50%; float: left;">
 			<time pubdate datetime="{{page.document.fragments.publication_date.date | date_to_xmlschema}}" title="{{page.document.fragments.publication_date.date | date_to_xmlschema | date: '%d.%m'}}">{{page.document.fragments.publication_date.date | date_to_xmlschema | date: "%d.%m.%Y"}}</time>
 		</p>
-		<div class="fb-share-button" style="float:right;" data-layout="button" data-href="javascript:fbshareCurrentPage()" data-size="small" data-mobile-iframe="true"><a target="_blank" href="javascript:fbshareCurrentPage()" class="fb-xfbml-parse-ignore">Partager</a></div>
+		<div class="fb-share-button" style="float:right;" data-layout="button" data-href="javascript:fbshareCurrentPageUnesc()" data-size="small" data-mobile-iframe="true"><a target="_blank" href="javascript:fbshareCurrentPage()" class="fb-xfbml-parse-ignore">Partager</a></div>
 	</div>
 </div>
