--- a/_layouts/single-news.html
+++ b/_layouts/single-news.html
@@ -13,13 +13,13 @@ layout: default
 
 <script language="javascript">
     function fbshareCurrentPage()
-    var url = "https://www.facebook.com/sharer/sharer.php?u="+escape(window.location.href)+"&t="+document.title+"&amp;src=sdkpreparse"
+    var url = "https://www.facebook.com/sharer/sharer.php?u="+escape(window.location.href)+"&t="+document.title+"&amp;src=sdkpreparse";
     return url; }
 </script>
 
 <script language="javascript">
     function fbshareCurrentPageUnesc()
-    var url = unescape("https://www.facebook.com/sharer/sharer.php?u="+escape(window.location.href)+"&t="+document.title+"&amp;src=sdkpreparse")
+    var url = unescape("https://www.facebook.com/sharer/sharer.php?u="+escape(window.location.href)+"&t="+document.title+"&amp;src=sdkpreparse");
     return url; }
 </script>
 
