--- a/_layouts/single-news.html
+++ b/_layouts/single-news.html
@@ -13,14 +13,14 @@ layout: default
 
 <script language="javascript">
     function fbshareCurrentPage(){
-    var url = "https://www.facebook.com/sharer/sharer.php?u="+escape(window.location.href)+"&t="+document.title+"&amp;src=sdkpreparse";
-    return url; }
+    var url1 = "https://www.facebook.com/sharer/sharer.php?u="+escape(window.location.href)+"&t="+document.title+"&amp;src=sdkpreparse";
+    return url1; }
 </script>
 
 <script language="javascript">
     function fbshareCurrentPageUnesc(){
-    var url = unescape("https://www.facebook.com/sharer/sharer.php?u="+escape(window.location.href)+"&t="+document.title+"&amp;src=sdkpreparse");
-    return url; }
+    var url2 = "https://www.facebook.com/sharer/sharer.php?u="+window.location.href+"&t="+document.title;
+    return url2; }
 </script>
 
 
