--- a/_layouts/single-news.html
+++ b/_layouts/single-news.html
@@ -19,7 +19,7 @@ layout: default
 
 <script language="javascript">
     function fbshareCurrentPageUnesc(){
-    var url2 = "https://www.facebook.com/sharer/sharer.php?u="+window.location.href+"&t="+document.title;
+    var url2 = window.location.href;
     return url2; }
 </script>
 
