--- a/_layouts/single-news.html
+++ b/_layouts/single-news.html
@@ -37,6 +37,6 @@ layout: default
     <p class="news_date" style="width: 50%; float: left;">
 			<time pubdate datetime="{{page.document.fragments.publication_date.date | date_to_xmlschema}}" title="{{page.document.fragments.publication_date.date | date_to_xmlschema | date: '%d.%m'}}">{{page.document.fragments.publication_date.date | date_to_xmlschema | date: "%d.%m.%Y"}}</time>
 		</p>
-		<div class="fb-share-button" style="float:right;" data-layout="button" data-href="javascript:fbshareCurrentPageUnesc()" data-size="small" data-mobile-iframe="true"><a target="_blank" href="javascript:fbshareCurrentPage()" class="fb-xfbml-parse-ignore">Partager</a></div>
+		<div class="fb-share-button" style="float:right;" data-layout="button" data-size="small" data-mobile-iframe="true"><a target="_blank" href="javascript:fbshareCurrentPage()" class="fb-xfbml-parse-ignore">Partager</a></div>
 	</div>
 </div>
