--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -142,7 +142,7 @@ html .hero {
 }
 .the_claim {
     position: absolute;
-    color: #FFFFFF;
+    color: #0088ce;
     width: inherit;
     font-size: 45px;
     line-height: 50px;
