--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -226,6 +226,7 @@ input[type=submit]{
 .latestnews_section,
 .news-page,
 .sports,
+.faq_block,
 #sites1 {
     margin-top: 220px;
 }
@@ -238,6 +239,7 @@ input[type=submit]{
     .latestnews_section,
     .news-page,
     .sports,
+    .faq_block,
     #sites1 {
         margin-top: 170px;
     }
@@ -251,6 +253,7 @@ input[type=submit]{
     .latestnews_section,
     .news-page,
     .sports,
+    .faq_block,
     #sites1 {
         margin-top: 180px;
     }
@@ -262,6 +265,7 @@ input[type=submit]{
 .about_yog,
 .heritage,
 .sports,
+.faq_block,
 .facts,
 .key_numbers,
 .sites {
