--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -176,6 +176,7 @@ input[type=submit]{
 .about_yog_1,
 .jobs,
 .sports,
+.faq_block,
 .heritage,
 .shop_section,
 .about_yog_section,
@@ -208,6 +209,7 @@ input[type=submit]{
 .about_yog,
 .heritage,
 .sports,
+.faq_block,
 .facts,
 .key_numbers,
 .sites,
