--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -176,7 +176,6 @@ input[type=submit]{
 .about_yog_1,
 .jobs,
 .sports,
-.faq_block,
 .heritage,
 .shop_section,
 .about_yog_section,
@@ -194,6 +193,7 @@ input[type=submit]{
 .newsletter_cta,
 .single-news-content header,
 .sites,
+.faq,
 .news-page,
 .news_section,
 .key_numbers {
@@ -209,7 +209,7 @@ input[type=submit]{
 .about_yog,
 .heritage,
 .sports,
-.faq_block,
+.faq,
 .facts,
 .key_numbers,
 .sites,
@@ -241,7 +241,7 @@ input[type=submit]{
     .latestnews_section,
     .news-page,
     .sports,
-    .faq_block,
+    .faq,
     #sites1 {
         margin-top: 170px;
     }
@@ -255,7 +255,7 @@ input[type=submit]{
     .latestnews_section,
     .news-page,
     .sports,
-    .faq_block,
+    .faq,
     #sites1 {
         margin-top: 180px;
     }
@@ -267,7 +267,7 @@ input[type=submit]{
 .about_yog,
 .heritage,
 .sports,
-.faq_block,
+.faq,
 .facts,
 .key_numbers,
 .sites {
