--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -24,3 +24,5 @@
 <script src="{{site.url}}/js/common.js"></script>
 <script src="{{site.url}}/js/vendors/countdown.js" type="text/javascript"></script>
 <script type="text/javascript">$('#countdown_container_tag').countdown({ 'lang': '{{site.langShort}}' });</script>
+<script src="{{site.url}}/js/vendors/jquery.mobile.custom.min.js"></script>
+<script src="{{site.url}}/js/vendors/faq_main.js"></script>
