--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -13,6 +13,8 @@
   <!-- End Google Analytics -->
 <link rel="stylesheet" href="{{ "/css/style-bottom.css" | prepend: site.baseurl_root }}">
 <link rel="stylesheet" type="text/css" href="{{ "/css/countdown.css" | prepend: site.baseurl_root }}">
+<link rel="stylesheet" type="text/css" href="{{ "/css/faq_style.css" | prepend: site.baseurl_root }}">
+<link rel="stylesheet" type="text/css" href="{{ "/css/faq_reset.css" | prepend: site.baseurl_root }}">
 <script src="{{site.url}}/js/vendors/jquery-3.2.0.min.js"></script>
 <script src="{{site.url}}/js/vendors/polyfill/modernizr.js"></script>
 <script src="{{site.url}}/js/vendors/jquery.timeago.min.js"></script>
