--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -21,6 +21,7 @@
 <script src="{{site.url}}/js/vendors/jquery.dotdotdot.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpBk0OIM7nh9iOiqxslyGPBSRp_uVaCmw"></script>
 <script src="{{site.url}}/js/vendors/jquery.visible.min.js"></script>
+<script src="{{site.url}}/js/vendors/faq_main.js"></script>
 <script src="{{site.url}}/js/common.js"></script>
 <script src="{{site.url}}/js/vendors/countdown.js" type="text/javascript"></script>
 <script type="text/javascript">$('#countdown_container_tag').countdown({ 'lang': '{{site.langShort}}' });</script>
