--- a/css/faq_style.css
+++ b/css/faq_style.css
@@ -2,6 +2,16 @@
 Primary style
 -------------------------------- */
 
+.faq *, .faq *::after, .faq *::before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.faq *::after, .faq *::before {
+  content: '';
+}
+
 body::after {
   /* overlay layer visible on small devices when the right panel slides in */
   position: fixed;
