--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -117,7 +117,8 @@ html .hero {
             line-height: 20px;
             font-weight: 600;
             padding-top: 0px;
-	    margin-top: 0px;
+	    margin-top: 10px;
+	    padding-left: 50px;
         }
     }
 }
