--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -195,9 +195,9 @@ html .hero {
 
 .newsletter-text {
     padding-right: 10px;
-    max-width: 50%;
+    width: 100%;
     @media(max-width: 991px) {
-        max-width: 100%;
+        width: 100%;
         padding-right: 0;
     }
 }
