--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -133,7 +133,7 @@ ol {
 .btn {
     display: inline-block;
     padding: 9px 15px;
-    background-color: $purple-primary;
+    background-color: #0088CE;
     color: white;
     border: 0;
     line-height: inherit;
@@ -180,8 +180,7 @@ input[type=submit]{
 .shop_section,
 .about_yog_section,
 #sites2 {
-    background-color: $purple-primary;
-    background-image: url('../images/layout/bkg_magenta.svg');
+    background-color: #CF0072;
     background-position: 50% 50%;
     background-size: cover;
     color: #fff;
@@ -196,8 +195,7 @@ input[type=submit]{
 .news-page,
 .news_section,
 .key_numbers {
-    background-color: $blue-primary;
-    background-image: url('../images/layout/bkg_blue.svg');
+    background-color: #0088CE;
     background-position: 0px 0px;
     background-size: cover;
     color: #fff;
@@ -332,5 +330,3 @@ input[type=submit]{
    max-width: 90%;
    margin-top: 0px;
 }
-
-
