--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -168,9 +168,9 @@ html .hero {
 
 .about_yog_section {
     height: auto;
-    padding-top: 50px;
-    padding-bottom: 100px;
-    background-color: $purple-primary;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background-color: #CF0072;
 }
 
 .h1_about_yog {
@@ -190,7 +190,7 @@ html .hero {
 }
 
 .shop_cta {
-    color: $purple-primary;
+    color: #CF0072;
 }
 
 .newsletter-text {
