--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -269,3 +269,13 @@ html .hero {
     font-size: 2.5vw;
     margin-left: 5vw;
 }
+.partners-title {
+    color: black;
+    text-align: left;
+    margin-bottom: 0px;
+    font-size: 15px;
+}
+.hr-line {
+    margin-top: -13px;
+    border-top: 1px solid #000000;
+}
