--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -196,6 +196,7 @@ input[type=submit]{
 .faq,
 .news-page,
 .news_section,
+.pme,
 .key_numbers {
     background-color: $blue-primary;
     background-image: url('../images/layout/bkg_blue.svg');
@@ -229,6 +230,7 @@ input[type=submit]{
 .news-page,
 .sports,
 .faq,
+.pme,
 #sites1 {
     margin-top: 220px;
 }
