--- a/_sass/pages/_pme.scss
+++ b/_sass/pages/_pme.scss
@@ -1,3 +1,10 @@
 .pme {
   margin-top: 190px;
 }
+.pme-title {
+  margin-top: 50px;
+  margin-bottom: 30px;
+}
+.pme-text {
+  margin-bottom: 50px;
+}
