--- a/_sass/pages/_pme.scss
+++ b/_sass/pages/_pme.scss
@@ -4,7 +4,12 @@
 .pme-title {
   margin-top: 50px;
   margin-bottom: 30px;
+  float:left;
+  width: 60%;
 }
 .pme-text {
   margin-bottom: 50px;
+}
+.pme-bouton {
+  float: left;
 }
