--- a/_sass/pages/_pme.scss
+++ b/_sass/pages/_pme.scss
@@ -5,11 +5,21 @@
   margin-top: 50px;
   margin-bottom: 30px;
   float:left;
-  width: 60%;
+  width: 100%;
 }
 .pme-text {
   margin-bottom: 50px;
 }
 .pme-bouton {
+  float: right;
+}
+.pme-left {
+  width: 60%;
   float: left;
+}
+.pme-right {
+  width: 40%;
+  float: left;
+  height: 100px;
+  margin-top: 40px;
 }
