--- a/_sass/pages/_pme.scss
+++ b/_sass/pages/_pme.scss
@@ -49,5 +49,10 @@
   @media (max-width: 500px) {
     width: 100%;
     margin-bottom: 20px;
+    margin-top: 0px;
+    height: 50px;
   }
+}
+.more-pme {
+    margin-right: 0px;
 }
