--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -291,9 +291,6 @@ html .hero {
 	    padding-top: 20px !important;
     	    margin-top: 0px;}height: 400px;
 	}
-	.cio-sponsors {
-		padding-top: 10px;
-	}
     }
 }	
 .newsletter_cta {
@@ -315,7 +312,7 @@ html .hero {
     @media(max-width: 767px) {
 	.first-title {
 	    padding-top: 20px !important;
-    	    margin-top: 0px;}height: 400px;
+    	    margin-top: 0px;
 	}
     }
 }
