--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -289,7 +289,7 @@ html .hero {
     @media(max-width: 767px) {
 	.first-title {
 	    padding-top: 20px !important;
-    	    margin-top: 0px;}height: 400px;
+    	    margin-top: 0px;
 	}
     }
 }	
