--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -296,6 +296,14 @@ html .hero {
 	    padding-top: 20px !important;
     	    margin-top: 0px !important;
 	}
+	padding-left: 50px;
+	height: 320px;
+    }
+    @media(max-width: 628px) {
+	height: 350px;
+    }	
+    @media(max-width: 387px) {
+	height: 380px;
     }
 }	
 .newsletter_cta {
@@ -326,6 +334,19 @@ html .hero {
 	    padding-top: 20px !important;
     	    margin-top: 0px !important;
 	}
+	padding-left: 50px;
+    }
+    @media(max-width: 551px) {
+	height: 420px;
+    }
+    @media(max-width: 494px) {
+	height: 450px;
+    }
+    @media(max-width: 416px) {
+	height: 480px;
+    }
+    @media(max-width: 362px) {
+	height: 550px;
     }
 }
 @media(max-width: 767px) {
