--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -164,6 +164,8 @@ html .hero {
     animation-fill-mode: both;
     -webkit-animation-direction: alternate;
     animation-direction: alternate;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding: 5px;
 }
 
 .about_yog_section {
