--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -355,6 +355,7 @@ html .hero {
     .cio-sponsors {
 	      padding-top: 10px;
     }
+}
 .partners-title {
     color: black;
     text-align: left;
