--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -230,6 +230,7 @@ html .hero {
 .cio-sponsors {
     padding-top: 80px;
     padding-bottom: 80px;
+    margin-top: 300px;
     text-align: center; // First olympic banner
     .container>img {
         padding-bottom: 40px;
