--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -231,6 +231,12 @@ html .hero {
     padding-top: 80px;
     padding-bottom: 80px;
     margin-top: 300px;
+    @media (max-width: 991px) {
+	margin-top: 700px;	
+    }
+    @media (max-width: 767px) {
+	margin-top: 0px;	
+    }
     text-align: center; // First olympic banner
     .container>img {
         padding-bottom: 40px;
