--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -179,6 +179,7 @@ input[type=submit]{
 .heritage,
 .shop_section,
 .about_yog_section,
+.agenda,
 #sites2 {
     background-color: #CF0072;
     background-position: 50% 50%;
@@ -213,6 +214,7 @@ input[type=submit]{
 .latestnews_section,
 .news-page,
 .news_section,
+.agenda,
 .social_wall {
     padding-top: 50px;
     padding-bottom: 50px;
