--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -1,3 +1,4 @@
+// Banner on homepage *************************************
 html .hero {
     background-size: cover;
     height: 900px;
@@ -15,7 +16,7 @@ html .hero {
 	    margin-left: 50px;
 	    width: 1200px;
         }
-    } // Width of image
+    }
     @media (max-width: 1651px) {
         height: 700px;
 	margin-top: 190px;
@@ -123,30 +124,6 @@ html .hero {
     }
 }
 
-.shop_section {
-    text-align: center;
-}
-
-.h1_shop_section {
-    text-align: center;
-    margin-top: 100px;
-    margin-bottom: 50px;
-    font-size: 30px;
-}
-
-.h2_shop_section {
-    text-align: center;
-    margin-bottom: 50px;
-    font-size: 24px;
-}
-
-#text_video {
-    margin-bottom: 50px;
-}
-
-#more_video {
-    margin-top: 25px;
-}
 .the_claim {
     position: absolute;
     color: #ffffff;
@@ -168,6 +145,7 @@ html .hero {
     padding: 5px;
 }
 
+// About *************************************
 .about_yog_section {
     height: auto;
     padding-top: 30px;
@@ -187,14 +165,35 @@ html .hero {
     margin-top: 20px;
 }
 
-.marchandising_section {
-    padding-bottom: 30px;
+// Volunteers infos ****************************
+.volunteers_small {
+    visibility: hidden;
+    position: absolute;
+    @media(max-width: 991px) {
+        visibility: visible !important;
+	      position: relative !important;
+    }
+}
+.volunteers_big{
+    @media(max-width: 991px) {
+	      visibility: hidden;
+	      position: absolute;
+    }
+}
+.volunteers_text p {
+    text-align: center !important;
+    text-transform: uppercase;
+    font-size: 2.2vw;
+    margin-left: 5vw;
+}
+.volunteers_text_small p {
+    text-align: center !important;
+    text-transform: uppercase;
+    font-size: 2.5vw;
+    margin-left: 5vw;
 }
 
-.shop_cta {
-    color: #CF0072;
-}
-
+// Newsletter and Socials cta *******************************
 .newsletter-text {
     padding-right: 10px;
     width: 100%;
@@ -227,58 +226,6 @@ html .hero {
     }
 }
 
-.cio-sponsors {
-    padding-top: 80px;
-    padding-bottom: 80px;
-    margin-top: 300px;
-    @media (max-width: 991px) {
-	margin-top: 700px;	
-    }
-    @media (max-width: 767px) {
-	margin-top: 0px;	
-    }
-    text-align: center; // First olympic banner
-    .container>img {
-        padding-bottom: 40px;
-        width:325px;
-	      padding-top: 20px;
-    }
-    .sponsors-list {
-        padding-left: 0;
-    }
-    .sponsors-list li {
-        display: inline-block;
-        vertical-align: middle;
-        margin: 0 34px 30px;
-        width: 140px;
-    }
-}
-.volunteers_small {
-    visibility: hidden;
-    position: absolute;
-    @media(max-width: 991px) {
-        visibility: visible !important;
-	      position: relative !important;
-    }
-}
-.volunteers_big{
-    @media(max-width: 991px) {
-	      visibility: hidden;
-	      position: absolute;
-    }
-}
-.volunteers_text p {
-    text-align: center !important;
-    text-transform: uppercase;
-    font-size: 2.2vw;
-    margin-left: 5vw;
-}
-.volunteers_text_small p {
-    text-align: center !important;
-    text-transform: uppercase;
-    font-size: 2.5vw;
-    margin-left: 5vw;
-}
 .socials_left {
     padding-left: 100px; 
     padding-right: 50px; 
@@ -358,19 +305,49 @@ html .hero {
 	      height: 550px;
     }
 }
+
+// Partners *********************************
+.cio-sponsors {
+    padding-top: 80px;
+    padding-bottom: 80px;
+    margin-top: 300px;
+    @media (max-width: 991px) {
+	margin-top: 700px;	
+    }
+    @media (max-width: 767px) {
+	margin-top: 0px;	
+    }
+    text-align: center; // First olympic banner
+    .container>img {
+        padding-bottom: 40px;
+        width:325px;
+	      padding-top: 20px;
+    }
+    .sponsors-list {
+        padding-left: 0;
+    }
+    .sponsors-list li {
+        display: inline-block;
+        vertical-align: middle;
+        margin: 0 34px 30px;
+        width: 140px;
+    }
+}
+
 @media(max-width: 767px) {
     .cio-sponsors {
 	      padding-top: 10px;
     }
 }
+
 .partners-title {
     color: black;
     text-align: left;
     margin-bottom: 0px;
     font-size: 13px;
 }
+
 .hr-line {
     margin-top: -12px;
     border-top: 1px solid #000000;
   }
-
