--- a/_layouts/single-news.html
+++ b/_layouts/single-news.html
@@ -33,7 +33,7 @@ layout: default
 	<div class="container news-content">
 		<h1>{{page.document.fragments.title.text}}</h1>
 		<p class="p_news">{{ page.document.fragments.body.html | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
-		{% for each img_element in document.fragments.img_gallery %}
+		{% for post in document.fragments.img_gallery.group_documents %}
 			<img src="{{ document.fragments.img_gallery.getImage("img_element").url }}"
 		{% endfor %}
     
