--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -26,3 +26,4 @@
 <script type="text/javascript">$('#countdown_container_tag').countdown({ 'lang': '{{site.langShort}}' });</script>
 <script src="{{site.url}}/js/vendors/jquery.mobile.custom.min.js"></script>
 <script src="{{site.url}}/js/vendors/faq_main.js"></script>
+<script type="text/javascript" src="https://addevent.com/libs/atc/1.6.1/atc.min.js" async defer></script>
