--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -306,6 +306,16 @@ html .hero {
     }
 }
 
+// Calendrier *******************************
+.calendrier {
+    padding: 5px 5px 5px 30px;
+}
+
+.addeventatc_icon {
+    left: 6px;
+    top: 4px;
+}
+
 // Partners *********************************
 .cio-sponsors {
     padding-top: 80px;
